K8s/policies/global-allow-all.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: debug-allow-all
spec:
  selector: all() # Targets EVERYTHING
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
