K8s/policies/http-ingress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: grecho
spec:
  selector: app == 'grecho'
  ingress:
    - action: Allow
      http:
        methods: ["GET"]
        paths:
          - exact: "/projects/calico"
          - prefix: "/users"
  egress:
    - action: Allow
