K8s/policies/ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-udp-1500-in
  namespace: default
spec:
  selector: app == 'udpecho'
  ingress:
    - source:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.200.200.0/24
      ports:
        - protocol: UDP
          port: 1500
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tcp-8001-in
  namespace: default
spec:
  selector: app == 'grecho'
  ingress:
    - source:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.200.200.0/24
      ports:
        - protocol: TCP
          port: 8001
